--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.11/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.min.js"></script>
   <script src="js/controllers/main.js"></script>
-  <script src="js/controllers/statPage.js"></script>
+  <script src="js/controllers/ptsPage.js"></script>
+  <script src="js/controllers/rebPage.js"></script>
+  <script src="js/controllers/astPage.js"></script>
   <script src="js/services/httpService.js"></script>
+  <!--add your new scripts here-->
   <script src="js/route.js"></script>
+  <!--add your nre html files here-->
   <script src="templates/homePage.html"></script>
-  <script src="templates/statPage.html"></script>
+  <script src="templates/ptsPage.html"></script>
+  <script src="templates/rebPage.html"></script>
+  <script src="templates/astPage.html"></script>
 </head>
 
 <body ng-app="nbaApp">
