--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.11/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.min.js"></script>
   <script src="js/controllers/main.js"></script>
-  <script src="js/controllers/statPage.js"></script>
+  <script src="js/controllers/fieldGoal3P.js"></script>
+  <script src="js/controllers/fieldGoalPCT.js"></script>
   <script src="js/services/httpService.js"></script>
   <script src="js/route.js"></script>
   <script src="templates/homePage.html"></script>
-  <script src="templates/statPage.html"></script>
+  <script src="templates/fieldGoal3P.html"></script>
+  <script src="templates/fieldGoalPCT.html"></script>
+
 </head>
 
 <body ng-app="nbaApp">
