--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>NBA Leaderboard</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.11/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="js/controllers/main.js"></script>
   <script src="js/controllers/fieldGoal3P.js"></script>
   <script src="js/controllers/fieldGoalPCT.js"></script>
@@ -30,6 +32,7 @@
   <script src="templates/rebPage.html"></script>
   <script src="templates/astPage.html"></script>
   <link rel="stylesheet" type="text/css" href="design/design.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 
 <body ng-app="nbaApp">
