--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
   <script src="templates/rebPage.html"></script>
   <script src="templates/astPage.html"></script>
   <link rel="stylesheet" type="text/css" href="design/design.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
 <body ng-app="nbaApp">
